# ChangeLog for sci-mathematics/maxima
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.50 2008/04/08 16:13:13 armin76 Exp $

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> maxima-5.14.0.ebuild:
  sparc stable wrt #215787

  07 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/maxima-5.13.0-xdg-utils.patch,
  -files/maxima-5.14.0-xdg-utils.patch, +files/maxima-no-init-files.patch,
  +files/maxima-xdg-utils.patch, maxima-5.13.0-r1.ebuild,
  maxima-5.14.0.ebuild:
  Do not load host lisp init files, see bug #203748. Join xdg patches.

  02 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> maxima-5.14.0.ebuild:
  Fixed default lisp dependency (bug #208515)

*maxima-5.14.0 (29 Jan 2008)

  29 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/maxima-5.14.0-xdg-utils.patch, +maxima-5.14.0.ebuild:
  Version bump.  Now supports again multiple lisp simultaneously.
  Thanks much to Andrey Grozin <A.G.Grozin@inp.nsk.su> to 
  update the ebuild and maintain it in the science overlay.

  08 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/maxima-emacs.patch, -maxima-5.9.1.ebuild, maxima-5.13.0-r1.ebuild:
  tetex version dependency should now be more than 3 (bug #203558)

  22 Dec 2007; nixnut <nixnut@gentoo.org> maxima-5.13.0-r1.ebuild:
  Stable on ppc wrt bug 201216

  08 Dec 2007; Samuli Suominen <drac@gentoo.org> maxima-5.13.0-r1.ebuild:
  amd64 stable wrt #201216

  06 Dec 2007; Ferris McCormick <fmccor@gentoo.org> maxima-5.13.0-r1.ebuild:
  Sparc stable --- Bug #201216 --- all tests pass.

  05 Dec 2007; Markus Meier <maekke@gentoo.org> maxima-5.13.0-r1.ebuild:
  x86 stable, bug #201216

  20 Nov 2007; Markus Dittrich <markusle@gentoo.org> maxima-5.9.1.ebuild,
  maxima-5.13.0-r1.ebuild:
  Switched tetex useflag and dependency to latex and latex-base,
  respectively (see bug #196745).

  08 Oct 2007; Ulrich Mueller <ulm@gentoo.org> maxima-5.13.0-r1.ebuild: