@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/wxmaxima/Attic/wxmaxima-0.7.4.ebuild,v 1.3 2008/03/01 12:40:42 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/wxmaxima/Attic/wxmaxima-0.7.4.ebuild,v 1.4 2008/04/12 10:33:44 nixnut Exp $
 
 WX_GTK_VER="2.8"
 inherit eutils autotools wxwidgets fdo-mime
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/${PN}/${MYP}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ppc ~x86"
 IUSE="unicode"
 
 DEPEND=">=dev-libs/libxml2-2.5.0
