@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/maxima
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.50 2008/04/08 16:13:13 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.51 2008/04/12 10:32:20 nixnut Exp $
+
+  12 Apr 2008; nixnut <nixnut@gentoo.org> maxima-5.14.0.ebuild:
+  Stable on ppc wrt bug 215787
 
   08 Apr 2008; Raúl Porcel <armin76@gentoo.org> maxima-5.14.0.ebuild:
   sparc stable wrt #215787
